# routes/api.php
@@ -25,10 +25,11 @@ Route::post('user/subscriber', 'App\Http\Controllers\API\UserAPIController@login
 
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
-})->name('lmao');
+})->name('example');
 
 Route::group(['middleware' => ['auth:sanctum', 'custom']], function () {
     Route::resource('users', App\Http\Controllers\API\UserAPIController::class);
 
     Route::resource('posts', PostAPIController::class);
+    Route::resource('products', App\Http\Controllers\API\ProductAPIController::class);
 });
